GNOME Bugzilla – Bug 748500
GtkSearchEntry docs incorrectly link to themselves
Last modified: 2015-04-27 10:17:39 UTC
Created attachment 302401 [details] [review] Patch "Often, GtkSearchEntry will be fed events by means of being placed inside a #GtkSearchEntry." I'm fairly certain that that second is supposed to be GtkSearchBar.
Review of attachment 302401 [details] [review]: Correct.