docs: Fix incorrect cross-reference to GtkSearchBar

https://bugzilla.gnome.org/show_bug.cgi?id=748500