gtk/gtksearchentry.c
@@ -60,7 +60,7 @@
  * moving between search results and ending the search.
  *
  * Often, GtkSearchEntry will be fed events by means of being
- * placed inside a #GtkSearchEntry. If that is not the case,
+ * placed inside a #GtkSearchBar. If that is not the case,
  * you can use gtk_search_entry_handle_event() to pass events.
  *
  * Since: 3.6
